<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finalexercise.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDiv"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

        <FrameLayout
        android:background="@drawable/backgorund_gradient_primary_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glDiv"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


    <TextView
        android:id="@+id/tvLogin"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/glDiv"
        app:layout_constraintStart_toStartOf="@id/glStart"

        style="@style/Heading1"/>

    <EditText
        android:id="@+id/etName"
        android:hint="@string/name_hint"

        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"

        android:layout_marginTop="60dp"
        style="@style/RoundedLayout"/>

    <EditText
        android:id="@+id/etLastName"
        android:hint="@string/last_name_hint"
        android:background="@drawable/rounded_edittext"

        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etName"

        android:layout_marginTop="20dp"
        style="@style/RoundedLayout"/>

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"

        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etLastName"

        android:layout_marginTop="20dp"
        style="@style/RoundedLayout"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password_hint"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"

        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etEmail"

        android:layout_marginTop="20dp"

        style="@style/RoundedLayout"/>

    <EditText
        android:id="@+id/etPassword2"
        android:hint="@string/repeat_password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etPassword"

        android:layout_marginTop="20dp"

        style="@style/RoundedLayout"/>

    <RadioGroup
        android:id="@+id/rgSex"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etPassword2"

        android:layout_marginTop="20dp"

        android:layout_width="300dp"
        android:layout_height="40dp">

        <RadioButton
            android:text="@string/gender_male"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

        <RadioButton
            android:text="@string/gender_female"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

        <RadioButton
            android:text="@string/gender_other"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnSignIn"
       android:text="@string/create_account"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/rgSex"

        android:layout_marginTop="20dp"
        android:padding="5dp"

        android:layout_width="300dp"
        android:layout_height="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>